--- a/style.css
+++ b/style.css
@@ -1,103 +1,91 @@
-@font-face {
-    font-family: Roboto;
-     src: url("assets/fonts/Roboto.ttf");
-   }
+html {
+  scroll-behavior: smooth;
+}
 
-   * {
-    box-sizing: border-box;
-  }
+{
+  box-sizing: border-box;
+}
 
-  body {
-    font-family: 'Roboto';
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+html {
+  display: block;
+}
 
-  .container {
-    max-width: 1440px;
-    margin: 0 auto;
-  }
+head {
+  display: none;
+}
 
-  .nav-list {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
+body {
+  background-color: #F5F5F5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 300px;
+  min-height: 90vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Coming_Soon', sans-serif;
+  font-size: 20px;
+  font-weight: 420;
+  line-height: 1.5;
+  color: #000000;
+}
 
-  html {
-    scroll-behavior: smooth; 
-  }
+{
+  box-sizing: border-box;
+}
 
-  .nav-list {
-    list-style: none;
-  }
+.header {
+  background-color: #C0C0C0;
+}
 
-  .nav-link {
-    padding: 0 20px;
-    line-height: 50px;
-  }
+{
+  box-sizing: border-box;
+}
 
-  .nav-link {
-    transition: .3s;
-  }
-  
+header {
+  display: block;
+}
 
-  .section-item a {
-    color: #829985;
-    text-decoration: none;  
-    transition: color 0.5s;
-  }
-  .section-item a:hover {
-    color: #4d2323;
-  }
+.container {
+  padding: 0 20px;
+}
 
-  .main-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .section {
-    width: 50%;
-  }
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  min-height: 50px;
+}
 
-  @media (max-width: 768px) {
-    .section {
-      width: 100%;
-    }
-  }
+{
+  box-sizing: border-box;
+}
 
-  @media (max-width: 768px) {
-    .section {
-      width: 100%;
-    }
-  }
+nav {
+  display: block;
+}
 
-  .link {
-    text-decoration: none;
-    color: #829985;
-    transition: color 0.5s;
-  }
-  
-  .link:hover {
-    color: #5d7260;
-  }
+.nav-list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
 
-  .section-item {
-    position: relative;
-    padding-left: 30px;
-  }
-  
-  .section-item::before {
-    content: "";
-    position: absolute;
-    top: 8px;
-    left: 0px;
-    width: 10px;
-    height: 10px; 
-    border: 1px solid #829985;
-    border-radius: 50%;
-  }
+.nav-link {
+  color: #2F4F4F;
+  font-size: 24px;
+  letter-spacing: 2px;
+    
+}
+
+.main {
+  margin-bottom: auto;
+}
+
+.main-title {
+  color: #808080;
+  font-size: 48px;
+  font-weight: 300;
+  letter-spacing: 4px;
+  line-height:8px;
+}
