--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ head {
 }
 
 body {
-  background-color: #F5F5F5;
+  background-color: #FFEFD5;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -22,7 +22,6 @@ body {
   padding: 0;
   font-family: 'Coming_Soon', sans-serif;
   font-size: 20px;
-  font-weight: 420;
   line-height: 1.5;
   color: #000000;
   box-sizing: border-box;
@@ -70,24 +69,52 @@ nav {
   margin-bottom: auto;
 }
 
+.section-title {
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  color: #778899;
+}
+
+
 .main-title {
-  color: #000000;
-  font-size: 48px;
-  font-weight: 300;
-  letter-spacing: 4px;
+  color: #2F4F4F;
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 2px;
   line-height:8px;
 }
 
 .section {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #C0C0C0;
+  width: auto;
+  padding: 10px;
+  padding-bottom: 35px;
+  border-bottom: 1px solid #672f2f;
 }
 
-.section-title {
-  margin-bottom: 20px;
-  font-size: 20px;
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  color: #829985;
+.section-item {
+  position: relative;
+  margin: 0;
+  margin-bottom: 5px;
+  padding: 0;
+  padding-left: 10px;
+}
+
+.footer {
+  background-color: #C0C0C0;
+  padding: 20px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+   
+}
+
+.github {
+   padding: 0 50px;
 }
