--- a/style.css
+++ b/style.css
@@ -118,3 +118,11 @@ nav {
 .github {
    padding: 0 50px;
 }
+
+.rss {
+  width: 121px;
+  height: 45px;
+  background-image: url(assets/svg/rs_school_js.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
